--- a/port/demo/tourplanner/html/sub_grnlight1_theme1.html
+++ b/port/demo/tourplanner/html/sub_grnlight1_theme1.html
@@ -618,7 +618,7 @@
 </div>
 <i class="dim"></i>
 <!-- E id : wrap -->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+<script src="http://js.modetour.com/jquery/ver/1.11.3.min.js"></script>
 <script src="../js/ui.js"></script>
 </body>
 </html>
